<resources>
    <string name="app_name">MyMenty</string>
    <string name="add_email">EMAIL ADDRESS</string>
    <string name="your_password">PASSWORD</string>
    <string name="new_here">I DO NOT HAVE AN ACCOUNT</string>
    <string name="add_a_cool_username">ADD A COOL USERNAME</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="already_have_an_account_login_instead">ALREADY HAVE AN ACCOUNT? LOGIN INSTEAD</string>
    <string name="daily_tips">DAILY TIPS</string>
    <string name="let_s_go">LET US GO</string>
    <string name="get_some_help">GET SOME HELP</string>
    <string name="sleep_data">SLEEP DATA</string>
    <string name="personal_time">PERSONAL TIME</string>
    <string name="home_">Home</string>
    <string name="search_">Search</string>
    <string name="stats_">Stats</string>
    <string name="profile_">Profile</string>
    <string name="settings_">Settings</string>
    <string name="nothing_found">Your search did not yield any results. Please try something differnt! Sorry for the incovenience.</string>
    <string name="save">SAVE</string>
    <string name="take_time_to_refresh_and_reload">Take time to refresh and reload</string>

    <array name="language_preference">
        <item>ENGLISH, UK</item>
        <item>ENGLISH, USA</item>
        <item>SWAHILI</item>
    </array>

</resources>