<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgAuthLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/bg_1"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent_50"/>

        </FrameLayout>


    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/registerFormCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUsername"
                android:hint="@string/add_a_cool_username"
                android:inputType="textPersonName"
                style="@style/edt_auth" />

            <View
                android:id="@+id/divider3"
                style="@style/edt_divider" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:hint="@string/add_email"
                android:inputType="textEmailAddress"
                style="@style/edt_auth" />

            <View
                android:id="@+id/divider1"
                style="@style/edt_divider" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                style="@style/edt_auth" />

            <View
                android:id="@+id/divider2"
                style="@style/edt_divider" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRepeatPass"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                style="@style/edt_auth" />

            <View
                android:id="@+id/divider4"
                style="@style/edt_divider" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerFormCard"
        app:srcCompat="@drawable/ic_forward"
        android:focusable="true" />

    <TextView
        android:id="@+id/txtGoToLogin"
        android:text="@string/already_have_an_account_login_instead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/txt_navigate_auth" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txtAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textColor="@color/text_on_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerFormCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>